tests/sema/bad/15_deref_invalid.sg
// нельзя разыменовывать не-ссылку
let x:int = 1;
let y:int = *x;          // error: dereference '*' expects '&T', got int
